dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderAttributeSet__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Set_Type__c</fullName>
        <label>Attribute Set Type</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Order Attribute Sets</relationshipLabel>
        <relationshipName>Order_Attribute_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <externalId>true</externalId>
        <label>Billing ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <label>CSR_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Component__c</fullName>
        <label>Order Component</label>
        <referenceTo>OrderComponent__c</referenceTo>
        <relationshipLabel>Order Attribute Sets</relationshipLabel>
        <relationshipName>Order_Attribute_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Order Attribute Sets</relationshipLabel>
        <relationshipName>Order_Attribute_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Pricing_Item__c</fullName>
        <label>Order Pricing Item</label>
        <referenceTo>OrderPricingItem__c</referenceTo>
        <relationshipLabel>Order Attribute Sets</relationshipLabel>
        <relationshipName>Order_Attribute_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Attribute Set</label>
    <nameField>
        <label>Order Attribute Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Attribute Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>